# turing

./: CMakeLists.txt  main.cpp  res.qrc  turing_ru.ts
examples/: add_dec.tm  bb4.txt  compare.tm  dec_to_bin.tm  divisible_by_3.tm  duplicate.tm  extract_ones.tm  fizzbuzz.tm  hello.tm  hello_world.txt  mul2_dec.tm  mul2_hex.tm  reverse.tm
examples/mul2/: mul2.txt
res/: cell.css  help.md
src/: main.cpp
src/mathexpr/: mathexpr.cpp  mathexpr.hpp
src/tur/: common.hpp  context.cpp  context.hpp  emulator.cpp  emulator.hpp  idspace.cpp  idspace.hpp  loader.cpp  loader.hpp  mathexpr.cpp  mathexpr.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp
src/ui/: cell.cpp  cell.h  edittapedialog.cpp  edittapedialog.h  edittapedialog.ui  helpwindow.cpp  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
